--- a/www/config.json
+++ b/www/config.json
@@ -1,5 +1,5 @@
 {
-    "app_id" : "com.avin.mobile",
+    "app_id" : "com.lms.avincenter",
     "appname": "Avin App",
     "desktopappname": "Avin Desktop",
     "versioncode" : "2020",
